@@ -38,6 +38,7 @@ MF.Maelforge = {
 	UnitID = nil,
 	TimeOut = 5,
 	RaidID = "U22D6DD797E7A5F87",
+	RaidID_P2 = "U35BDBE1D14577953",
 	Castbar = nil,
 	TimersRef = {},
 	AlertsRef = {},
@@ -55,7 +56,8 @@ MF.Maelforge = {
 		},
 		AlertsRef = {
 			Enabled = true,
-			Hell = KBM.Defaults.AlertObj.Create("purple"),
+			Hell_Yellow = KBM.Defaults.AlertObj.Create("yellow"),
+			Hell_Green = KBM.Defaults.AlertObj.Create("dark_green"),
 			Fiery = KBM.Defaults.AlertObj.Create("red"),
 			Earthen = KBM.Defaults.AlertObj.Create("yellow"),
 		},
@@ -85,6 +87,11 @@ MF.Lang.Debuff.Fiery = KBM.Language:Add("Fiery Fissure")
 -- Ability Dictionary
 MF.Lang.Ability = {}
 
+-- Menu Dictionary
+MF.Lang.Menu = {}
+MF.Lang.Menu.Hell_Green = KBM.Language:Add("Hellfire (Green)")
+MF.Lang.Menu.Hell_Yellow = KBM.Language:Add("Hellfire (Yellow)")
+
 -- Description
 MF.Lang.Descript = {}
 MF.Lang.Descript.Main = KBM.Language:Add("Maelforge - Final")
@@ -100,6 +107,7 @@ function MF:AddBosses(KBM_Boss)
 		[self.Maelforge.Name] = self.Maelforge,
 	}
 	KBM.SubBossID[self.Maelforge.RaidID] = self.Maelforge
+	KBM.SubBossID[self.Maelforge.RaidID_P2] = self.Maelforge
 
 end
 
@@ -166,6 +174,22 @@ function MF:RemoveUnits(UnitID)
 	return false
 end
 
+function MF.PhaseTwo()
+	if MF.Phase == 1 then
+		MF.PhaseObj.Objectives:Remove()
+		MF.PhaseObj.Objectives:AddPercent(MF.Maelforge.Name, 30, 65)
+		MF.PhaseObj:SetPhase(2)
+		MF.Phase = 2
+	end
+end
+
+function MF.PhaseFinal()
+	MF.PhaseObj.Objectives:Remove()
+	MF.PhaseObj.Objectives:AddPercent(MF.Maelforge.Name, 0, 30)
+	MF.PhaseObj:SetPhase(KBM.Language.Options.Final[KBM.Lang])
+	MF.Phase = 3
+end
+
 function MF:Death(UnitID)
 	if self.Maelforge.UnitID == UnitID then
 		self.Maelforge.Dead = true
@@ -174,10 +198,11 @@ function MF:Death(UnitID)
 	return false
 end
 
-function MF:UnitHPCheck(unitDetails, unitID)	
-	if unitDetails and unitID then
-		if not unitDetails.player then
-			if unitDetails.name == self.Maelforge.Name then
+function MF:UnitHPCheck(uDetails, unitID)	
+	if uDetails and unitID then
+		if not uDetails.player then
+			if uDetails.name == self.Maelforge.Name then
+				self.Maelforge.UnitID = unitID
 				if not self.EncounterRunning then
 					self.EncounterRunning = true
 					self.StartTime = Inspect.Time.Real()
@@ -187,11 +212,14 @@ function MF:UnitHPCheck(unitDetails, unitID)
 					self.Maelforge.Casting = false
 					self.Maelforge.CastBar:Create(unitID)
 					self.PhaseObj:Start(self.StartTime)
-					self.PhaseObj:SetPhase("Single")
-					self.PhaseObj.Objectives:AddPercent(self.Maelforge.Name, 0, 100)
-					self.Phase = 1
+					if uDetails.type == self.RaidID then
+						self.PhaseObj:SetPhase(1)
+						self.PhaseObj.Objectives:AddPercent(self.Maelforge.Name, 65, 100)
+						self.Phase = 1
+					else
+						self.PhaseTwo()
+					end
 				end
-				self.Maelforge.UnitID = unitID
 				self.Maelforge.Available = true
 				return self.Maelforge
 			end
@@ -224,20 +252,28 @@ function MF:Start()
 	KBM.Defaults.MechObj.Assign(self.Maelforge)
 	
 	-- Create Alerts
-	self.Maelforge.AlertsRef.Hell = KBM.Alert:Create(self.Lang.Debuff.Hell[KBM.Lang], nil, true, true, "purple")
+	self.Maelforge.AlertsRef.Hell_Yellow = KBM.Alert:Create(self.Lang.Menu.Hell_Yellow[KBM.Lang], nil, false, true, "yellow")
+	self.Maelforge.AlertsRef.Hell_Green = KBM.Alert:Create(self.Lang.Menu.Hell_Green[KBM.Lang], nil, false, true, "dark_green")
 	self.Maelforge.AlertsRef.Fiery = KBM.Alert:Create(self.Lang.Debuff.Fiery[KBM.Lang], nil, false, true, "red")
 	self.Maelforge.AlertsRef.Earthen = KBM.Alert:Create(self.Lang.Debuff.Earthen[KBM.Lang], nil, false, true, "yellow")
 	KBM.Defaults.AlertObj.Assign(self.Maelforge)
 	
 	-- Assign Alerts and Timers to Triggers
-	self.Maelforge.Triggers.Hell = KBM.Trigger:Create(self.Lang.Debuff.Hell[KBM.Lang], "playerBuff", self.Maelforge)
-	self.Maelforge.Triggers.Hell:AddAlert(self.Maelforge.AlertsRef.Hell, true)
-	self.Maelforge.Triggers.Hell:AddTimer(self.Maelforge.TimersRef.Hell)
-	self.Maelforge.Triggers.Hell:AddSpy(self.Maelforge.MechRef.Hell)
+	self.Maelforge.Triggers.Hell_Yellow = KBM.Trigger:Create("B58F6969FA32C3353", "playerIDBuff", self.Maelforge)
+	self.Maelforge.Triggers.Hell_Yellow:AddAlert(self.Maelforge.AlertsRef.Hell_Yellow, true)
+	self.Maelforge.Triggers.Hell_Yellow:AddTimer(self.Maelforge.TimersRef.Hell)
+	self.Maelforge.Triggers.Hell_Yellow:AddSpy(self.Maelforge.MechRef.Hell)
+	self.Maelforge.Triggers.Hell_Green = KBM.Trigger:Create("B0E7E2D5A0A251BA2", "playerIDBuff", self.Maelforge)
+	self.Maelforge.Triggers.Hell_Green:AddAlert(self.Maelforge.AlertsRef.Hell_Green, true)
+	self.Maelforge.Triggers.Hell_Green:AddSpy(self.Maelforge.MechRef.Hell)
 	self.Maelforge.Triggers.Fiery = KBM.Trigger:Create(self.Lang.Debuff.Fiery[KBM.Lang], "playerBuff", self.Maelforge)
 	self.Maelforge.Triggers.Fiery:AddAlert(self.Maelforge.AlertsRef.Fiery, true)
 	self.Maelforge.Triggers.Earthen = KBM.Trigger:Create(self.Lang.Debuff.Earthen[KBM.Lang], "playerBuff", self.Maelforge)
 	self.Maelforge.Triggers.Earthen:AddAlert(self.Maelforge.AlertsRef.Earthen, true)
+	self.Maelforge.Triggers.PhaseTwo = KBM.Trigger:Create(65, "percent", self.Maelforge)
+	self.Maelforge.Triggers.PhaseTwo:AddPhase(self.PhaseTwo)
+	self.Maelforge.Triggers.PhaseFinal = KBM.Trigger:Create(30, "percent", self.Maelforge)
+	self.Maelforge.Triggers.PhaseFinal:AddPhase(self.PhaseFinal)
 	
 	self.Maelforge.CastBar = KBM.CastBar:Add(self, self.Maelforge)
 	self.PhaseObj = KBM.PhaseMonitor.Phase:Create(1)
